syntax = "proto3";

import "google/api/annotations.proto";
import "validate/validate.proto";

option go_package = "./payment-service";
package payment;

// Define the PaymentMethod enum
enum PaymentMethod {
  CREDIT_CARD = 0;
  DEBIT_CARD = 1;
}

// PaymentRequest represents the payment information provided by the customer.
message PaymentRequest {
  PaymentMethod payment_method = 1;
  string card_number = 2 [(validate.rules).string.max_len = 19];
  string expiration_date = 3 [(validate.rules).string.len = 5];
  string cvv = 4 [(validate.rules).string = {min_len: 3, max_len: 4}];
  double amount = 5 [(validate.rules).double.gte = 0];;
  string currency = 6;
}

// PaymentResponse represents the response after processing a payment request.
message PaymentResponse {
  string message = 1;
  string transaction_id = 2;
}

service PaymentService {
  rpc ProcessPayment(PaymentRequest) returns (PaymentResponse);
}